<resources>
    <string name="AI_resolution_error">Wrong resolution,please close intelligent resolution</string>
    <string name="ChangeMode">Change Mode</string>
    <string name="CheckUpdate">Check Update</string>
    <string name="CtrlF1">Android Bluetooth Mode(Ctrl+F1)</string>
    <string name="CtrlF2">iOS Bluetooth Mode(Ctrl+F2)</string>
    <string name="CtrlF3">Android Active Mode(Ctrl+F3)</string>
    <string name="CtrlF4">Android USB Line Mode(Ctrl+F4)</string>
    <string name="CtrlF5">Bluetooth Keyboard Mouse Mode(Ctrl+F5)</string>
    <string name="KEY_0_DESC">0</string>
    <string name="KEY_102ND_DESC">KEY_102ND</string>
    <string name="KEY_1_DESC">1</string>
    <string name="KEY_2_DESC">2</string>
    <string name="KEY_3_DESC">3</string>
    <string name="KEY_4_DESC">4</string>
    <string name="KEY_5_DESC">5</string>
    <string name="KEY_6_DESC">6</string>
    <string name="KEY_7_DESC">7</string>
    <string name="KEY_8_DESC">8</string>
    <string name="KEY_9_DESC">9</string>
    <string name="KEY_ALT_L_DESC">Alt</string>
    <string name="KEY_ALT_R_DESC">RAlt</string>
    <string name="KEY_APOSTROPHE_DESC">KEY_APOSTROPHE_DESC</string>
    <string name="KEY_A_DESC">A</string>
    <string name="KEY_BACKSLASH_DESC">KEY_BACKSLASH</string>
    <string name="KEY_BACK_DESC">Back</string>
    <string name="KEY_BEIJING_EXCHANGE_DESC">ScopEx</string>
    <string name="KEY_BEIJING_SCALE_DESC">ScopZoom</string>
    <string name="KEY_B_DESC">B</string>
    <string name="KEY_CAPSLOCK_DESC">Caps</string>
    <string name="KEY_COMMA_DESC">KEY_COMMA</string>
    <string name="KEY_COMPOSE_DESC">KEY_COMPOSE</string>
    <string name="KEY_CTRL_L_DESC">Ctrl</string>
    <string name="KEY_CTRL_R_DESC">RCtrl</string>
    <string name="KEY_C_DESC">C</string>
    <string name="KEY_DELETE_DESC">Del</string>
    <string name="KEY_DOT_DESC">KEY_DOT</string>
    <string name="KEY_DOWN_DESC">KEY_DOWN</string>
    <string name="KEY_D_DESC">D</string>
    <string name="KEY_END_DESC">End</string>
    <string name="KEY_ENTER_DESC">Enter</string>
    <string name="KEY_EQUAL_DESC">=</string>
    <string name="KEY_ESC_DESC">Esc</string>
    <string name="KEY_E_DESC">E</string>
    <string name="KEY_F10_DESC">F10</string>
    <string name="KEY_F11_DESC">F11</string>
    <string name="KEY_F12_DESC">F12</string>
    <string name="KEY_F1_DESC">F1</string>
    <string name="KEY_F2_DESC">F2</string>
    <string name="KEY_F3_DESC">F3</string>
    <string name="KEY_F4_DESC">F4</string>
    <string name="KEY_F5_DESC">F5</string>
    <string name="KEY_F6_DESC">F6</string>
    <string name="KEY_F7_DESC">F7</string>
    <string name="KEY_F8_DESC">F8</string>
    <string name="KEY_F9_DESC">F9</string>
    <string name="KEY_F_DESC">F</string>
    <string name="KEY_GRAVE_DESC">KEY_GRAVE</string>
    <string name="KEY_G_DESC">G</string>
    <string name="KEY_HASHTILDE_DESC">KEY_HASHTILDE</string>
    <string name="KEY_HOME_DESC">Home</string>
    <string name="KEY_H_DESC">H</string>
    <string name="KEY_INSERT_DESC">Ins</string>
    <string name="KEY_I_DESC">I</string>
    <string name="KEY_J_DESC">J</string>
    <string name="KEY_KP0_DESC">KEY_KP0</string>
    <string name="KEY_KP1_DESC">KEY_KP1</string>
    <string name="KEY_KP2_DESC">KEY_KP2</string>
    <string name="KEY_KP3_DESC">KEY_KP3</string>
    <string name="KEY_KP4_DESC">KEY_KP4</string>
    <string name="KEY_KP5_DESC">KEY_KP5</string>
    <string name="KEY_KP6_DESC">KEY_KP6</string>
    <string name="KEY_KP7_DESC">KEY_KP7</string>
    <string name="KEY_KP8_DESC">KEY_KP8</string>
    <string name="KEY_KP9_DESC">KEY_KP9</string>
    <string name="KEY_KPASTERISK_DESC">KEY_KPASTERISK</string>
    <string name="KEY_KPDOT_DESC">KEY_KPDOT</string>
    <string name="KEY_KPENTER_DESC">KEY_KPENTER</string>
    <string name="KEY_KPEQUAL_DESC">KEY_KPEQUAL</string>
    <string name="KEY_KPMINUS_DESC">KEY_KPMINUS</string>
    <string name="KEY_KPPLUS_DESC">KEY_KPPLUS</string>
    <string name="KEY_KPSLASH_DESC">KEY_KPSLASH</string>
    <string name="KEY_K_DESC">K</string>
    <string name="KEY_LEFTBRACE_DESC">[</string>
    <string name="KEY_LEFT_DESC">KEY_LEFT</string>
    <string name="KEY_L_DESC">L</string>
    <string name="KEY_MINUS_DESC">-</string>
    <string name="KEY_MOUSE_DESC">Mouse</string>
    <string name="KEY_MOUSE_L_DESC">MouseL</string>
    <string name="KEY_MOUSE_M_DESC">MouseM</string>
    <string name="KEY_MOUSE_R_DESC">MouseR</string>
    <string name="KEY_MOUSE_SIDE1_DESC">MSide1</string>
    <string name="KEY_MOUSE_SIDE2_DESC">MSide2</string>
    <string name="KEY_M_DESC">M</string>
    <string name="KEY_NUMLOCK_DESC">KEY_NUMLOCK</string>
    <string name="KEY_N_DESC">N</string>
    <string name="KEY_O_DESC">O</string>
    <string name="KEY_PAGEDOWN_DESC">PgDn</string>
    <string name="KEY_PAGEUP_DESC">PgUp</string>
    <string name="KEY_PAUSE_DESC">Pause</string>
    <string name="KEY_POWER_DESC">KEY_POWER</string>
    <string name="KEY_P_DESC">P</string>
    <string name="KEY_Q_DESC">Q</string>
    <string name="KEY_RIGHTBRACJ_DESC">]</string>
    <string name="KEY_RIGHT_DESC">KEY_RIGHT</string>
    <string name="KEY_R_DESC">R</string>
    <string name="KEY_SCROLLLOCK_DESC">Lock</string>
    <string name="KEY_SEMICOLON_DESC">KEY_SEMICOLON</string>
    <string name="KEY_SHIFT_L_DESC">Shift</string>
    <string name="KEY_SHIFT_R_DESC">RShift</string>
    <string name="KEY_SLASH_DESC">KEY_SLASH</string>
    <string name="KEY_SPACE_DESC">Space</string>
    <string name="KEY_SYSRQ_DESC">PS</string>
    <string name="KEY_S_DESC">S</string>
    <string name="KEY_TAB_DESC">Tab</string>
    <string name="KEY_T_DESC">T</string>
    <string name="KEY_UDLR_DESC">KEY_UDLR</string>
    <string name="KEY_UP_DESC">KEY_UP</string>
    <string name="KEY_U_DESC">U</string>
    <string name="KEY_V_DESC">V</string>
    <string name="KEY_WASD_DESC">WASD</string>
    <string name="KEY_W_DESC">W</string>
    <string name="KEY_X_DESC">X</string>
    <string name="KEY_Y_DESC">Y</string>
    <string name="KEY_Z_DESC">Z</string>
    <string name="LOL">LOL Edition</string>
    <string name="LOLEdition">LOL Mobile(Play other games do not open)</string>
    <string name="M16_MINECRAFT">M16-Minecraft</string>
    <string name="M1_LOL">(M1-LOL)</string>
    <string name="M1_MINECRAFT">M1 Pro-Minecraft</string>
    <string name="M24_MINECRAFT">M24-Minecraft</string>
    <string name="M2S_MINECRAFT">M2S-Minecraft</string>
    <string name="M2U_MINECRAFT">M2U-Minecraft</string>
    <string name="M3_MINECRAFT">M3-Minecraft</string>
    <string name="M4_Minecraft">M4-Minecraft</string>
    <string name="MINECRAFT">Minecraft Edition</string>
    <string name="MTK">(MTK)</string>
    <string name="MinecraftEdition">Minecraft Edition(Play other games do not open)</string>
    <string name="NOT_MTK_PHONE_IN_MTK_MODE">Your phone/pad can be used without entering the active mode, but now device is in active mode. If you don\'t know what the active mode is or mistakenly switching the mode, press Ctrl+F1 switch to Bluetooth mode!</string>
    <string name="OTG_MODE_REMIND">OPPO/VIVO phone need open OTG; some phone may not support charge with data transfer, then pls disconnect the power off the device, use phone\'s power</string>
    <string name="UAC_OFF">USB Audio:OFF</string>
    <string name="USBAudio">USB Audio(Audio play in earphone jack)</string>
    <string name="_1">Gun 1 down</string>
    <string name="_2">Gun 2 down</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_failed">Failed !</string>
    <string name="action_success">Successfully...</string>
    <string name="activated">(Activated)</string>
    <string name="app_version">Application Version</string>
    <string name="auto_open_mirro">Peek Scope:OFF</string>
    <string name="automatic_pointer">TAB auto open mouse</string>
    <string name="backupButton">Backup/Share</string>
    <string name="cancle">Cancel</string>
    <string name="cf_dynamic_continues">CF Continues Dynamic</string>
    <string name="communication_way_ble">BLE</string>
    <string name="communication_way_spp">SPP</string>
    <string name="confirm">OK</string>
    <string name="connect">Connect</string>
    <string name="ctrl_hold_repeat">hold Ctrl in fire repeat</string>
    <string name="cur_communication_way">Current Communication Way</string>
    <string name="cursor">Cursor</string>
    <string name="device_auth_option">Whether to enable device authentication</string>
    <string name="e_click_in_fire_repeat">Click E in fire do Q/E</string>
    <string name="edit_key">Edit\nKey</string>
    <string name="game_relate_param">Game\nParam</string>
    <string name="hid_device_option">HID device or not</string>
    <string name="hide_float">Hide\nFloat</string>
    <string name="input_data_hint">Input data that you want to send</string>
    <string name="intelligent_pressure_gun">Smart gun down</string>
    <string name="long_press">Scope Mode-Hold</string>
    <string name="long_press_jump">hold SPACE repeating jump</string>
    <string name="look_key">Show\nKey</string>
    <string name="mouse_wheel_sw_gun">Wheel Switch Gun</string>
    <string name="prefix_hex">0x</string>
    <string name="q_click_in_fire_repeat">Click Q in fire do Q/E/C</string>
    <string name="read">Read</string>
    <string name="send_spp_private_data">Send Spp Private Data</string>
    <string name="setup_notification">Register notifications</string>
    <string name="shibie">AI\nAdjust</string>
    <string name="shift_to_walk">WASD+Shift no run</string>
    <string name="test_settings">Test Settings</string>
    <string name="use_custom_reconnect_way_option">Whether to customize method to reconnect the device</string>
    <string name="use_spp_private_channel">Whether to use SPP private channels</string>
    <string name="virtual_mouse">Virtual mouse cursor</string>
    <string name="vol_plus">Earphone Vol</string>
    <string name="wasd">WASD Run</string>
    <string name="write">Write</string>
    <string name="write_input">Write input</string>
    <string name="x9_r9s">VIVO X9/R9s phone</string>
</resources>