<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/main" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <Button android:id="@+id/connect" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/connect"/>
    <Button android:enabled="false" android:id="@+id/read" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/read"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="14sp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/prefix_hex"/>
        <TextView android:textSize="14sp" android:id="@+id/read_hex_output" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView android:textSize="14sp" android:id="@+id/read_output" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="14sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prefix_hex"/>
        <EditText android:id="@+id/write_input" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/write_input" android:inputType="numberDecimal"/>
    </LinearLayout>
    <Button android:enabled="false" android:id="@+id/write" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/write"/>
    <Button android:enabled="false" android:id="@+id/notify" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/setup_notification"/>
</LinearLayout>
