<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/m_layoutRoot" android:background="@mipmap/bg" android:layout_width="match_parent" android:layout_height="match_parent" android:layoutDirection="ltr">
    <LinearLayout android:orientation="vertical" android:id="@+id/m_layoutM" android:background="@drawable/round_rect_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_alignParentRight="false" android:layout_marginStart="10dp" android:layout_toEndOf="@+id/m_layoutL">
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/magnification" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:text="@string/long_press" android:textAlignment="center" android:layoutDirection="ltr"/>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/auto_pointer" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_margin" android:text="@string/automatic_pointer" android:layoutDirection="ltr"/>
        <LinearLayout android:gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/hold_ctrl_in_fire_repeat" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_margin" android:text="@string/ctrl_hold_repeat" android:layoutDirection="ltr"/>
            <Button android:textSize="9sp" android:textColor="#ffffff" android:id="@+id/m_btnCtrlRepeatSpeed" android:background="@drawable/round_rect" android:layout_width="50dp" android:layout_height="25dp" android:layout_marginRight="2dp" android:layout_weight="0" android:textAllCaps="false"/>
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/click_e_in_fire_repeat" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_margin" android:text="@string/e_click_in_fire_repeat" android:layout_alignParentRight="true" android:layoutDirection="ltr"/>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/click_q_in_fire_repeat" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_margin" android:text="@string/q_click_in_fire_repeat" android:layoutDirection="ltr"/>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/m_btnShiftToWalk" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_margin" android:text="@string/shift_to_walk" android:layoutDirection="ltr"/>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/m_btnMouseWheelSwGun" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_margin" android:text="@string/mouse_wheel_sw_gun" android:layoutDirection="ltr"/>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/bottom_layer" android:layout_width="match_parent" android:layout_height="80dp" android:layout_alignParentBottom="true">
        <View android:visibility="invisible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton android:textColor="#ffffff" android:id="@+id/cancel" android:background="@drawable/round_rect" android:layout_width="120dp" android:layout_height="wrap_content" android:text="@string/cancle" android:textAllCaps="false"/>
        <View android:visibility="invisible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <androidx.appcompat.widget.AppCompatButton android:textColor="#ffffff" android:id="@+id/ok" android:background="@drawable/round_rect" android:layout_width="120dp" android:layout_height="wrap_content" android:text="@string/confirm" android:textAllCaps="false"/>
        <View android:visibility="invisible" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/m_layoutL" android:background="@drawable/round_rect_black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="10dp">
        <LinearLayout android:gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/sprint" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0dp" android:layout_marginTop="0dp" android:text="@string/wasd" android:layout_weight="1" android:textAlignment="viewStart" android:layoutDirection="ltr"/>
            <Button android:id="@+id/m_btnADDownAutoAD" android:background="@mipmap/dynamic_off" android:layout_width="22dp" android:layout_height="22dp" android:layout_marginRight="2dp" android:layout_weight="0"/>
            <Button android:textSize="10sp" android:textColor="#ffffff" android:id="@+id/m_btnAutoADSpeed" android:background="@drawable/round_rect" android:layout_width="60dp" android:layout_height="22dp" android:layout_marginRight="2dp" android:layout_weight="0" android:textAllCaps="false"/>
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/press_gun" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/intelligent_pressure_gun" android:layoutDirection="ltr"/>
        <LinearLayout android:gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/virtual_mouse" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:text="@string/virtual_mouse" android:layoutDirection="ltr"/>
            <Button android:id="@+id/btn_virtual_mouse_center" android:background="@mipmap/dynamic_off" android:layout_width="22dp" android:layout_height="22dp" android:layout_marginRight="2dp" android:layout_weight="0"/>
            <Button android:textSize="10sp" android:textColor="#ffffff" android:id="@+id/m_btnUSBVMouseHz" android:background="@drawable/round_rect" android:layout_width="50dp" android:layout_height="22dp" android:layout_marginRight="2dp" android:layout_weight="0" android:textAllCaps="false"/>
            <Button android:id="@+id/m_btnVMouseThrowL" android:background="@mipmap/throw_l_off_ch" android:layout_width="22dp" android:layout_height="22dp" android:layout_marginRight="2dp" android:layout_weight="0"/>
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/always_jump" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/long_press_jump" android:layout_alignParentRight="true" android:layoutDirection="ltr"/>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/m_btnCFDynamicContinues" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/cf_dynamic_continues" android:layout_alignParentRight="true" android:layoutDirection="ltr"/>
        <androidx.appcompat.widget.AppCompatButton android:textColor="#ffffff" android:id="@+id/qe_open_scope" android:background="@drawable/round_rect" android:padding="3dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/auto_open_mirro" android:textAllCaps="false"/>
        <LinearLayout android:gravity="left" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp">
            <androidx.appcompat.widget.AppCompatTextView android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/m_textHPVolTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/vol_plus" android:layout_weight="1" android:textAlignment="textEnd"/>
            <Button android:textSize="10sp" android:textColor="#ffffff" android:id="@+id/m_btnHPVolPlus" android:background="@drawable/round_rect" android:layout_width="40dp" android:layout_height="24dp" android:layout_marginRight="2dp" android:layout_weight="0" android:textAllCaps="false"/>
            <Button android:id="@+id/m_btnShunfenger" android:background="@mipmap/dynamic_off" android:layout_width="22dp" android:layout_height="22dp" android:layout_marginRight="2dp" android:layout_weight="0"/>
        </LinearLayout>
        <androidx.appcompat.widget.SwitchCompat android:textColor="#ffffff" android:id="@+id/special_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/x9_r9s" android:layoutDirection="ltr"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/m_layoutR" android:layout_width="100dp" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_toRightOf="@+id/m_layoutM" android:layout_alignParentTop="true" android:layout_alignParentBottom="false">
        <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/update_btn" android:background="@drawable/round_rect" android:layout_width="@dimen/setting_btn_width" android:layout_height="wrap_content" android:layout_marginTop="0dp" android:layout_marginRight="10dp" android:text="@string/CheckUpdate" android:textAllCaps="false" android:layout_marginStart="10dp"/>
        <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/m_btnChangeMode" android:background="@drawable/round_rect" android:layout_width="@dimen/setting_btn_width" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/ChangeMode" android:textAllCaps="false" android:layout_marginStart="10dp"/>
        <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/m_btnBackup" android:background="@drawable/round_rect" android:layout_width="@dimen/setting_btn_width" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/backupButton" android:textAllCaps="false" android:layout_marginStart="10dp"/>
        <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/m_btnBG" android:background="@drawable/game_button" android:layout_width="@dimen/setting_btn_width" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/backupButton" android:textAllCaps="false" android:layout_marginStart="10dp"/>
        <Button android:textSize="12sp" android:textColor="#ffffff" android:id="@+id/m_btnCursor" android:background="@drawable/game_button" android:layout_width="@dimen/setting_btn_width" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/cursor" android:textAllCaps="false" android:layout_marginStart="10dp"/>
    </LinearLayout>
    <TextView android:textSize="9sp" android:textColor="#00ff00" android:id="@+id/tip_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:layout_above="@+id/bottom_layer" android:layout_centerHorizontal="true"/>
</RelativeLayout>
