<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/content" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" android:layoutDirection="ltr">
    <ImageView android:id="@+id/float_window_icon" android:background="@android:color/transparent" android:layout_width="100dp" android:layout_height="100dp" android:src="@drawable/half_left"/>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/table" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:gravity="bottom|center_horizontal" android:id="@+id/show" android:background="@mipmap/show_key" android:layout_width="60dp" android:layout_height="60dp" android:text="@string/look_key" android:textAlignment="center"/>
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:gravity="bottom|center_horizontal" android:id="@+id/edit" android:background="@mipmap/key_edit" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginLeft="1dp" android:text="@string/edit_key"/>
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:gravity="bottom|center_horizontal" android:id="@+id/gunPos" android:background="@mipmap/ai_edit" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginLeft="1dp" android:text="@string/shibie" android:lineSpacingExtra="0sp"/>
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:gravity="bottom|center_horizontal" android:id="@+id/close" android:background="@mipmap/hide_float" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginLeft="1dp" android:text="@string/hide_float"/>
        <TextView android:textSize="12sp" android:textColor="@android:color/white" android:gravity="bottom|center_horizontal" android:id="@+id/m_textGameSetting" android:background="@mipmap/game_set" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginLeft="1dp" android:text="@string/game_relate_param"/>
    </LinearLayout>
</LinearLayout>
