<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:id="@+id/rl_settings_top" android:layout_width="match_parent" android:layout_height="@dimen/item_height">
        <TextView android:textSize="18sp" android:textColor="@android:color/black" android:id="@+id/tv_settings_top_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_settings" android:layout_centerInParent="true"/>
        <TextView android:id="@+id/tv_settings_top_left" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginStart="5dp" app:drawableStartCompat="@drawable/bg_back_selector"/>
        <TextView android:id="@+id/tv_settings_top_right" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_marginEnd="5dp" android:layout_alignParentEnd="true" app:drawableEndCompat="@drawable/bg_save_selector"/>
    </RelativeLayout>
    <ScrollView android:id="@+id/sv_settings_container" android:background="@color/rc_decoration" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cl_settings_container" android:paddingTop="10dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="16dp" android:paddingEnd="16dp">
            <TextView android:textSize="@dimen/text_14sp" android:textColor="@android:color/black" android:id="@+id/tv_settings_version_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_version" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <TextView android:textSize="@dimen/text_14sp" android:textColor="@android:color/black" android:id="@+id/tv_settings_version_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="10dp" android:layout_toEndOf="@+id/tv_settings_version_name" app:layout_constraintBottom_toBottomOf="@+id/tv_settings_version_name" app:layout_constraintStart_toEndOf="@+id/tv_settings_version_name" app:layout_constraintTop_toTopOf="@+id/tv_settings_version_name"/>
            <CheckBox android:id="@+id/cb_settings_device_auth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/device_auth_option" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_settings_version_name"/>
            <CheckBox android:id="@+id/cb_settings_hid_device" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/hid_device_option" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/cb_settings_device_auth"/>
            <CheckBox android:id="@+id/cb_settings_custom_reconnect_way" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/use_custom_reconnect_way_option" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/cb_settings_hid_device"/>
            <TextView android:textSize="@dimen/text_16sp" android:textColor="@android:color/black" android:id="@+id/tv_settings_communication_way" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/cur_communication_way" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/cb_settings_custom_reconnect_way"/>
            <RadioGroup android:id="@+id/rg_settings_communication_way" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_settings_communication_way">
                <RadioButton android:textSize="@dimen/sp_14" android:textColor="@android:color/black" android:id="@+id/rb_settings_way_ble" android:padding="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/communication_way_ble"/>
                <RadioButton android:textSize="@dimen/sp_14" android:textColor="@android:color/black" android:id="@+id/rb_settings_way_spp" android:padding="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/communication_way_spp"/>
            </RadioGroup>
            <CheckBox android:id="@+id/cb_settings_use_spp_private_channel" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/use_spp_private_channel" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/rg_settings_communication_way"/>
            <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/cl_settings_send_spp_private_data" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/cb_settings_use_spp_private_channel">
                <EditText android:id="@+id/et_settings_input_data" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:text="test" android:hint="@string/input_data_hint" android:inputType="text" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
                <Button android:id="@+id/btn_send_spp_data" android:background="@color/bg_white" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/send_spp_private_data" app:layout_constraintTop_toBottomOf="@+id/et_settings_input_data"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>
